# resources_api

./: .codeclimate.yml  .dockerignore  .env  .flake8  .gitignore  .travis.yml  CONTRIBUTING.md  Dockerfile  Makefile  Ops.md  Pipfile  README.md  app.ini  app.py  configs.py  docker-compose.ci.yml  docker-compose.yml  implement_poetry.sh  openapi.yaml  pyproject.toml  requirements.txt  resources.yml  run.py
.circleci/: config.yml
.dev/: dev-jwt-key  dev-jwt-key.pub
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml
app/: __init__.py  admin.py  app.py  cli.py  commands.py  health_check.py  healthcheck.py  models.py  routes.py  utils.py  versioning.py
app/api/: __init__.py  auth.py  errors.py  routes.py  validations.py  versioning.py
app/api/routes/: __init__.py  api_key.py  categories.py  helpers.py  languages.py  logger.py  metrics.py  old_routes.py  resource_creation.py  resource_modification.py  resource_retrieval.py  resource_updating.py  resource_voting.py  resources.py  search.py  searching.py  utils.py
app/errors/: __init__.py  handlers.py
app/static/: openapi.yaml
app/templates/: index.html  my_master.html  openapi.yaml
app/templates/admin/: index.html
app/templates/security/: login_user.html  register_user.html
app/views/: __init__.py  routes.py
db_setup/: configs.py  profile.py  resources.yml
db_setup/app/: __init__.py  health_check.py  models.py
db_setup/migrations/versions/: 579c613eff61_initial_add.py
lib/: util.sh
migrations/: env.py
migrations/versions/: 158d296b23b8_.py  205742d3b3f5_change_blacklist_to_deny.py  4b6587b98b26_.py  514a36eb1161_.py  59a6f6552b5a_.py  824f1576e904_.py  9dd599c1495d_set_default_allow_languages_nullable.py  e6ac83ef4570_include_vote_direction.py  fc34137ad3ba_.py
src/: configs.py  run.py
src/app/: __init__.py  health_check.py  models.py  utils.py
src/app/api/: __init__.py  routes.py
src/migrations/: env.py
src/migrations/versions/: 579c613eff61_initial_add.py  59a6f6552b5a_.py
src/tests/: conftest.py
src/tests/unit/: test_routes.py
tests/: conftest.py  utils.py
tests/unit/: test_auth.py  test_auth_jwt.py  test_handlers.py  test_models.py  test_persistent_routes.py  test_response_util.py  test_routes.py  test_versioning.py
tests/unit/test_routes/: helpers.py  test_api_key.py  test_categories.py  test_invalid_put_post.py  test_languages.py  test_resource_create.py  test_resource_crud.py  test_resource_retreival.py  test_resource_update.py  test_searching.py  test_utils.py
