[tool.poetry]
name = "resources_api"
version = "0.1.0"
description = "Resources API for Operation Code"
authors = ["OC_Contributors"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
algoliasearch = ">=2.0,<3.0"
alembic = "1.5.0"
bandit = "1.5.1"
click = "7.1.2"
flake8 = "3.8.4"
flask = "1.1.2"
Flask-Cors = "3.0.9"
Flask-Migrate = "2.5.3"
prometheus_client = "0.9.0"
psycopg2-binary = "2.8.6"
py-healthcheck = "1.10.1"
pytest = "6.2.1"
pytest-mock = "3.5.1"
pytest-cov = "2.10.1"
python-dateutil = "2.8.1"
pyyaml = "5.3.1"
requests = "2.25.1"
sqlalchemy = "1.3.22"
SQLAlchemy-Utils = "0.36.8"
uWSGI = "2.0.19.1"
Werkzeug = "1.0.1"
pyjwt = "^2.0.0"
cryptography = "^3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
